syntax = "proto3";

option csharp_namespace = "DataBaseService.Protos";

service SheetConnector{
   	rpc GetGoogleSheetsToken(GetGoogleSheetsTokenRequest) returns (GoogleToken);
}

message GetGoogleSheetsTokenRequest{
    int32 bot_id = 1;
    int32 owner = 2 ;
}
message GoogleToken{
    string token =1;
}